--- a/MiniaturesGallery/Views/Posts/ScrollIndex.cshtml
+++ b/MiniaturesGallery/Views/Posts/ScrollIndex.cshtml
@@ -206,6 +206,14 @@
         var prevDisabled = !(Model as PaginatedList<Post>).HasPreviousPage ? "disabled" : "";
         var nextDisabled = !(Model as PaginatedList<Post>).HasNextPage ? "disabled" : "";
     }
+    <a id="hiddenLink"
+       asp-action="ScrollIndex"
+       asp-route-SearchString="@ViewBag.SearchString"
+       asp-route-OrderByFilter="@ViewBag.StatusFilter"
+       asp-route-DateFrom="@ViewBag.DateFrom"
+       asp-route-DateTo="@ViewBag.DateTo"
+       hidden>
+    </a>
     <ul class="pagination pagination-lg justify-content-center">
         @{
             await PresentPageNumberLink((pageIndex - 1).ToString(), "«", prevDisabled);
@@ -253,6 +261,9 @@
     </ul>
 </div>
 
-<script>
-    document.getElementsByName("OrderByFilter")[0].value = @Html.Raw(ViewBag.OrderByFilter);
-</script>
+@if (ViewBag.OrderByFilter != null)
+{
+    <script>
+        document.getElementsByName("OrderByFilter")[0].value = @Html.Raw(ViewBag.OrderByFilter);
+    </script>
+}
