--- a/MiniaturesGallery/Views/Posts/ScrollIndex.cshtml
+++ b/MiniaturesGallery/Views/Posts/ScrollIndex.cshtml
@@ -42,8 +42,12 @@
             </div>
             <div class="input-group">
                 <input type="text" name="SearchString" class="form-control" value="@ViewBag.SearchString">
-                <select name="OrderByFilter" class="form-select" value="@ViewBag.OrderByFilter" asp-items="Html.GetEnumSelectList<OrderBy>()">
+                <select name="OrderByFilter" class="form-select" value="@ViewBag.OrderByFilter">
                     <option value="">Order by</option>
+                    <option value="@(nameof(Post.CrateDate)+"_desc")">Date Descending</option>
+                    <option value="@(nameof(Post.CrateDate))">Date Ascending</option>
+                    <option value="@(nameof(Post.Rating)+"_desc")">Rates Descending</option>
+                    <option value="@(nameof(Post.Rating))">Rates Ascending</option>
                 </select>
                 <span class="input-group-append">
                     <button type="submit" class="btn btn-primary" asp-action="ScrollIndex">Search</button>
