Changed pagination to use partial views instead functions in every view that needs it. Added sub controller of Posts and views to check out AngularJS.

--- a/MiniaturesGallery/Views/Posts/Edit.cshtml
+++ b/MiniaturesGallery/Views/Posts/Edit.cshtml
@@ -38,7 +38,7 @@
 
     <hr />
     <h5>Photos:</h5>
-    <div id="carouselImages" class="carousel slide carousel-dark carousel-fade">
+    <div id="carouselImages" class="carousel slide carousel-fade">
         <div class="carousel-inner">
             @foreach (var att in Model.Post.Attachments)
             {
