--- a/MiniaturesGallery/Views/Posts/Details.cshtml
+++ b/MiniaturesGallery/Views/Posts/Details.cshtml
@@ -12,7 +12,7 @@
     {
         @foreach (var comm in comments)
         {
-            <div class="card border-dark">
+            <div class="card border">
                 <div class="card-header"><h3>@if(comm.User != null){<p>@comm.User.UserName</p>} else{<p>Guest</p>}</h3></div>
                 <div class="card-body">
                     <p class="card-text">@comm.Body</p>
