--- a/MiniaturesGallery/Views/Posts/ScrollIndexOfUser.cshtml
+++ b/MiniaturesGallery/Views/Posts/ScrollIndexOfUser.cshtml
@@ -1,32 +1,18 @@
-﻿@model MiniaturesGallery.ViewModels.PostsOfUserViewModel
+﻿@model IEnumerable<MiniaturesGallery.Models.Post>
 @{
     ViewData["Title"] = "ScrollIndex";
     Layout = "~/Views/Shared/_Layout.cshtml";
     @using MiniaturesGallery.HelpClasses
     @using MiniaturesGallery.Extensions
 }
-@functions
-{
-    private async Task PresentPageNumberLink(string pageNumber, string symbol, string disabled)
-    {
-        <li class="page-item" @(disabled)>
-            <a asp-action="ScrollIndexOfUser"
-               asp-route-filtrUserID="@Model.UserID"
-               asp-route-pageNumber="@(pageNumber)"
-               class="page-link">
-                @(symbol)
-            </a>
-        </li>
-    }
-}
 
 <div class="row d-flex justify-content-center">
     <div class="col-6 mb-4 text-center">
-        <h3>User: @Model.UserName</h3>
+        <h3>User: @ViewBag.UserName</h3>
     </div>
 </div>
 
-@foreach (Post post in Model.PaginatedList)
+@foreach (Post post in Model)
 {
     <div class="card mb-4">
         <div class="card-body">
@@ -81,11 +67,11 @@
                         }
                     }
                 </div>
-                <button class="carousel-control-prev text-white" type="button" data-bs-target="#carouselImages@(post.ID)" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselImages@(post.ID)" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next text-white" type="button" data-bs-target="#carouselImages@(post.ID)" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselImages@(post.ID)" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
@@ -172,64 +158,4 @@
     </div>
 }
 
-<div>
-    @{
-        int pageIndex = (Model.PaginatedList as PaginatedList<Post>).PageIndex;
-        int totalPages = (Model.PaginatedList as PaginatedList<Post>).TotalPages;
-        var prevDisabled = !(Model.PaginatedList as PaginatedList<Post>).HasPreviousPage ? "disabled" : "";
-        var nextDisabled = !(Model.PaginatedList as PaginatedList<Post>).HasNextPage ? "disabled" : "";
-    }
-    <a id="hiddenLink"
-       asp-action="ScrollIndexOfUser"
-       asp-route-SearchString="@ViewBag.SearchString"
-       asp-route-OrderByFilter="@ViewBag.StatusFilter"
-       asp-route-DateFrom="@ViewBag.DateFrom"
-       asp-route-DateTo="@ViewBag.DateTo"
-       hidden>
-    </a>
-    <ul class="pagination pagination-lg justify-content-center">
-        @{
-            await PresentPageNumberLink((pageIndex - 1).ToString(), "«", prevDisabled);
-        }
-        @if (pageIndex != 1)
-        {
-            await PresentPageNumberLink("1", "1","");
-        }
-        @if (pageIndex > 4)
-        {
-            <li class="page-item">
-                <a onclick="redirectToPage()" class="page-link">...</a>
-            </li>
-        }
-        @if (pageIndex > 3)
-        {
-            await PresentPageNumberLink((pageIndex - 2).ToString(), (pageIndex - 2).ToString(), "");
-        }
-        @if (pageIndex > 2)
-        {
-            await PresentPageNumberLink((pageIndex - 1).ToString(), (pageIndex - 1).ToString(), "");
-        }
-        <li class="page-item active"><a class="page-link">@(pageIndex)</a></li>
-        @if ((totalPages - pageIndex) > 0)
-        {
-            await PresentPageNumberLink((pageIndex + 1).ToString(), (pageIndex + 1).ToString(), "");
-        }
-        @if ((totalPages - pageIndex) > 1)
-        {
-            await PresentPageNumberLink((pageIndex + 2).ToString(), (pageIndex + 2).ToString(), "");
-        }
-        @if ((totalPages - pageIndex) > 3)
-        {
-            <li class="page-item">
-                <a onclick="redirectToPage()" class="page-link">...</a>
-            </li>
-        }
-        @if ((totalPages - pageIndex) > 2)
-        {
-            await PresentPageNumberLink((totalPages).ToString(), (totalPages).ToString(), "");
-        }
-        @{
-            await PresentPageNumberLink((pageIndex + 1).ToString(), "»", nextDisabled);
-        }
-    </ul>
-</div>
+<partial name="_Pagination" />
